--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/compiler-cli": "4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "7.0.5",
+    "angular-cli": "^1.0.0-beta.28.3",
     "codelyzer": "2.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
